Fix flyer on safari

--- a/src/pages/event/style.scss
+++ b/src/pages/event/style.scss
@@ -9,6 +9,8 @@
   &--viewGallery .EventPage {
     &-flyer {
       margin-left: 50%;
+      top: 0;
+      left: 0;
     }
 
     &-gallery {
